# ui-triangle-calculator

./: Cargo.toml
src/: main.rs
src/res/: ui.glade  ui.glade~
